--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href='style.css'/>
+
     <script src="https://kit.fontawesome.com/1170179a49.js" crossorigin="anonymous"></script>
     <title>Calculator</title>
 </head>
@@ -35,5 +36,5 @@
         </div>
     </div>
 </body>
-
+<script src="index.js"></script>
 </html>
