--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="digit zero" value="0">0</button>
             <button type="button" class="point" value=".">.</button>
-            <button type="button" class="operator equals" value="=">=</button>
+            <button type="button" class="equals" value="=">=</button>
         </div>
     </div>
 </body>
